Disabled Nullable in csproj

--- a/MyInventory/MyInventory/MyInventory.csproj
+++ b/MyInventory/MyInventory/MyInventory.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>aspnet-MyInventory-2755A6CA-0436-44CF-9752-A315C3E579EF</UserSecretsId>
   </PropertyGroup>
