--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@
 /.vs/MyInventory/FileContentIndex/b01308f3-a4b4-4c43-ad7a-ea60456c5140.vsidx
 /.vs/MyInventory/v17/.wsuo
 /.vs/MyInventory/FileContentIndex/12fd702f-cbf0-4518-ab16-1025a27841b6.vsidx
+/MyInventory/.gitignore
+/.gitignore
+/.gitignore
