--- a/MyInventory/MyInventory/Dockerfile
+++ b/MyInventory/MyInventory/Dockerfile
@@ -1,7 +1,7 @@
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 WORKDIR /app
-EXPOSE 80
-
+EXPOSE 5012
+ENV ASPNETCORE_URLS=http://+:5012
 USER app
 FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG configuration=Release
