--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /MyInventory/.vs/MyInventory/v17/.suo
 /.gitignore
 *.vsidx
+/.vs/MyInventory/FileContentIndex/7779a1d0-2396-4a6b-bdd1-5adc943823cb.vsidx
