--- a/MyInventory/MyInventory/appsettings.json
+++ b/MyInventory/MyInventory/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source = myinventorydatabase; Initial Catalog = MyInventory; user ID=SA; password=@Tahmid000@#;TrustServerCertificate=True;"
+    "DefaultConnection": "Data Source = midb; Initial Catalog = MyInventory; user ID=SA; password=@pass123@#;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
